Grid fix column-gap

--- a/client/src/styles/blocs/grid.scss
+++ b/client/src/styles/blocs/grid.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 16px;
-// если мы не используем грид для мобильной версии, а востальных используем, то для этого модификатор desktop
+  // если мы не используем грид для мобильной версии, а востальных используем, то для этого модификатор desktop
   &--desktop {
     display: block;
     @include onTablet {
@@ -15,11 +15,11 @@
 
   @include onTablet {
     grid-template-columns: repeat(12, 1fr);
-    column-gap: 24px;
+    column-gap: 16px;
   }
   @include onDesKtop {
     grid-template-columns: repeat(24, 1fr);
-    column-gap: 24px;
+    column-gap: 16px;
   }
 
   &__item {
@@ -41,9 +41,9 @@
           }
         }
       }
-    }  
+    }
   }
-/** при использовании в классах 
+  /** при использовании в классах 
 class=" grid__item
         grid__item--onTablet--1-4      -указываем какие колонки занимает
         grid__item--onDesKtop--1-8"
